--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,24 @@
 aiohttp==3.7.4.post0
+amqp==5.0.6
 aniso8601==7.0.0
 asgiref==3.4.1
 async-timeout==3.0.1
+asyncpg==0.24.0
 attrs==21.2.0
 beautifulsoup4==4.10.0
+billiard==3.6.4.0
+blis==0.7.4
 bs4==0.0.1
+catalogue==2.0.6
+celery==5.1.2
+certifi==2021.5.30
 chardet==4.0.0
+charset-normalizer==2.0.6
+click==7.1.2
+click-didyoumean==0.3.0
+click-plugins==1.1.1
+click-repl==0.2.0
+cymem==2.0.5
 Django==3.2.8
 django-filter==21.1
 django-graphql-auth==0.3.16
@@ -15,16 +28,39 @@ graphene-django==2.15.0
 graphql-core==2.3.2
 graphql-relay==2.0.1
 idna==3.2
+Jinja2==3.0.2
+kombu==5.1.0
+MarkupSafe==2.0.1
 multidict==5.2.0
+murmurhash==1.0.5
+numpy==1.21.2
+packaging==21.0
+pathy==0.6.0
 pkg_resources==0.0.0
+preshed==3.0.5
 promise==2.3
+prompt-toolkit==3.0.20
+pydantic==1.8.2
 PyJWT==1.7.1
+pyparsing==2.4.7
 pytz==2021.3
+redis==3.5.3
+requests==2.26.0
 Rx==1.6.1
 singledispatch==3.7.0
 six==1.16.0
+smart-open==5.2.1
 soupsieve==2.2.1
+spacy-legacy==3.0.8
 sqlparse==0.4.2
+srsly==2.4.1
 text-unidecode==1.3
+thinc==8.0.10
+tqdm==4.62.3
+typer==0.4.0
 typing-extensions==3.10.0.2
+urllib3==1.26.7
+vine==5.0.0
+wasabi==0.8.2
+wcwidth==0.2.5
 yarl==1.6.3
