--- a/requirements.txt
+++ b/requirements.txt
@@ -1,24 +1,34 @@
 aiohttp==3.7.4.post0
 amqp==5.0.6
 aniso8601==7.0.0
+arrow==1.2.1
 asgiref==3.4.1
 async-timeout==3.0.1
 asyncpg==0.24.0
 attrs==21.2.0
+autobahn==21.3.1
+Automat==20.2.0
 beautifulsoup4==4.10.0
 billiard==3.6.4.0
+binaryornot==0.4.4
 blis==0.7.4
 bs4==0.0.1
 catalogue==2.0.6
 celery==5.1.2
 certifi==2021.5.30
+cffi==1.15.0
+channels==3.0.4
 chardet==4.0.0
 charset-normalizer==2.0.6
 click==7.1.2
 click-didyoumean==0.3.0
 click-plugins==1.1.1
 click-repl==0.2.0
+constantly==15.1.0
+cookiecutter==1.7.3
+cryptography==35.0.0
 cymem==2.0.5
+daphne==3.0.2
 Django==3.2.8
 django-filter==21.1
 django-graphql-auth==0.3.16
@@ -27,8 +37,11 @@ graphene==2.1.9
 graphene-django==2.15.0
 graphql-core==2.3.2
 graphql-relay==2.0.1
+hyperlink==21.0.0
 idna==3.2
+incremental==21.3.0
 Jinja2==3.0.2
+jinja2-time==0.2.0
 kombu==5.1.0
 MarkupSafe==2.0.1
 multidict==5.2.0
@@ -37,30 +50,41 @@ numpy==1.21.2
 packaging==21.0
 pathy==0.6.0
 pkg_resources==0.0.0
+poyo==0.5.0
 preshed==3.0.5
 promise==2.3
 prompt-toolkit==3.0.20
+pyasn1==0.4.8
+pyasn1-modules==0.2.8
+pycparser==2.20
 pydantic==1.8.2
 PyJWT==1.7.1
+pyOpenSSL==21.0.0
 pyparsing==2.4.7
+python-dateutil==2.8.2
+python-slugify==5.0.2
 pytz==2021.3
 redis==3.5.3
 requests==2.26.0
 Rx==1.6.1
+service-identity==21.1.0
 singledispatch==3.7.0
 six==1.16.0
 smart-open==5.2.1
 soupsieve==2.2.1
-spacy-legacy==3.0.8
 sqlparse==0.4.2
 srsly==2.4.1
 text-unidecode==1.3
 thinc==8.0.10
 tqdm==4.62.3
+Twisted==21.7.0
+txaio==21.2.1
 typer==0.4.0
 typing-extensions==3.10.0.2
+ujson==4.2.0
 urllib3==1.26.7
 vine==5.0.0
 wasabi==0.8.2
 wcwidth==0.2.5
 yarl==1.6.3
+zope.interface==5.4.0
