--- a/requirements.txt
+++ b/requirements.txt
@@ -33,6 +33,7 @@ Django==3.2.8
 django-filter==21.1
 django-graphql-auth==0.3.16
 django-graphql-jwt==0.3.0
+django-redis==5.0.0
 graphene==2.1.9
 graphene-django==2.15.0
 graphql-core==2.3.2
